# kharcha

./: .gitignore  pyproject.toml
apps/accounts/: forms.py  models.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/dashboard/: models.py  views.py
apps/dashboard/management/commands/: seed_expense.py  seed_income.py
apps/dashboard/migrations/: 0001_initial.py
apps/expenses/: models.py  views.py
apps/expenses/migrations/: 0001_initial.py
apps/expenses/templatetags/: custom_filters.py
apps/income/: forms.py  models.py  views.py
apps/income/migrations/: 0001_initial.py  0002_remove_income_payment_method_income_account.py
apps/users/: admin.py  models.py  views.py
apps/users/migrations/: 0001_initial.py
core/: settings.py  urls.py
templates/: base.html  unauth_base.html
templates/accounts/: accounts_dashboard.html  debt_page.html
templates/dashboard/: all_transactions.html  category_list.html  dashboard.html  report_pdf.html
templates/expenses/: expense_confirm_delete.html  expense_form.html  expense_list.html
templates/income/: income_page.html
templates/shared/: sidebar.html
templates/users/: login.html  registration.html
