[project]
name = "kharcha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-lite>=1.3.0",
    "django>=5.2.6",
    "django-htmx>=1.25.0",
    "django-types>=0.22.0",
    "djlint>=1.36.4",
    "gunicorn>=23.0.0",
    "huey[backends]>=2.5.4",
    "kaleido>=1.2.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-decouple>=3.8",
    "ruff>=0.14.6",
    "ty>=0.0.11",
    "waitress>=3.0.2",
    "whitenoise>=6.11.0",
    "xhtml2pdf>=0.2.17",
]


[tool.djlint]
ignore="H014,H015,H030,H031,H016,D101,D106,D105,D102,D100,D103,H021"

[tool.ruff]
line-length = 88 # Same as Black
target-version = "py312"
exclude = ["migrations", "__pycache__"]
select = ["E", "F", "B", "D"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D106"
]
